--- a/style.css
+++ b/style.css
@@ -34,4 +34,40 @@ button:disabled {
   color: red;
   margin-top: 20px;
 }
- 
+ body {
+  background-color: black;
+  color: green;
+  font-family: "Courier New", Courier, monospace;
+  margin: 0;
+  padding: 0;
+}
+
+header {
+  text-align: center;
+  padding: 20px;
+  border-bottom: 2px solid green;
+}
+
+h1, h2 {
+  color: lime;
+}
+
+table {
+  width: 80%;
+  margin: 20px auto;
+  border-collapse: collapse;
+}
+
+table, th, td {
+  border: 1px solid green;
+}
+
+th, td {
+  padding: 10px;
+  text-align: center;
+}
+
+tr:nth-child(even) {
+  background-color: #222;
+}
+
