--- a/style.css
+++ b/style.css
@@ -70,4 +70,31 @@ th, td {
 tr:nth-child(even) {
   background-color: #222;
 }
+/* Navigation Menu */
+nav {
+  background-color: #111;
+  padding: 10px 0;
+}
+
+nav ul {
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  margin: 0;
+  padding: 0;
+}
+
+nav ul li {
+  margin: 0 20px;
+}
+
+nav ul li a {
+  text-decoration: none;
+  color: lime;
+  font-weight: bold;
+}
+
+nav ul li a:hover {
+  color: white;
+}
 
